cmake_minimum_required(VERSION 3.22)
project(C__)

set(CMAKE_CXX_STANDARD 17)


add_subdirectory(src/Solution1_100)
add_subdirectory(src/Solution101_200)
add_subdirectory(src/Solution201_300)
add_subdirectory(src/Solution301_400)
add_subdirectory(src/Solution401_500)
add_subdirectory(src/Solution501_600)
add_subdirectory(src/Solution601_700)
add_subdirectory(src/Solution701_800)
add_subdirectory(src/Solution801_900)
add_subdirectory(src/Solution901_1000)
add_subdirectory(src/Solution1001_1100)
add_subdirectory(src/Solution1101_1200)
add_subdirectory(src/Solution1201_1300)
add_subdirectory(src/Solution1301_1400)
add_subdirectory(src/Solution1401_1500)
add_subdirectory(src/Solution1501_1600)
add_subdirectory(src/Solution1601_1700)
add_subdirectory(src/Solution1701_1800)
add_subdirectory(src/Solution1801_1900)
add_subdirectory(src/Solution1901_2000)
add_subdirectory(src/Solution2001_2100)
add_subdirectory(src/Solution2101_2200)
add_subdirectory(src/Solution2201_2300)
add_subdirectory(src/Solution2301_2400)
add_subdirectory(src/Solution2401_2500)
add_subdirectory(src/Solution2501_2600)
add_subdirectory(src/Solution2601_2700)
add_subdirectory(src/Solution2701_2800)
add_subdirectory(src/Solution2801_2900)
add_subdirectory(src/Solution2901_3000)
add_subdirectory(src/Tool)
